# TCGLifeCounterESP32

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  InputSequence.mmd  Page.mmd  PageFlow.mmd  README.md  SoftwareStack.mmd  sdkconfig  sdkconfig.old
Hardware/life_counter/: button_matrix.kicad_sch  fp-info-cache  fp-lib-table  life_counter.kicad_pcb  life_counter.kicad_prl  life_counter.kicad_pro  life_counter.kicad_sch  life_counter_lib.bak  sym-lib-table
Hardware/life_counter/life_counter_footprints.pretty/: 1.3in128x64OLED.kicad_mod  1.5in128x128OLED.kicad_mod  2.42in128x64OLED.kicad_mod  2_THT_P5.08_R1.kicad_mod  CAP_1206X_AVX-M.kicad_mod  CD4148W(1206C).kicad_mod  Cable_strain_relief_1.5mm.kicad_mod  DPAK-4_6P22X6P73_ONS-M.kicad_mod  MODULE_113991054.kicad_mod  RC1206N_YAG-M.kicad_mod  RESC3116X65N.kicad_mod  RESC3216X75N.kicad_mod  SOD123_DIO-M.kicad_mod  SOT223_STN3_STM.kicad_mod  SW_TS04-66-50-BK-160-SMT.kicad_mod  T520A.kicad_mod  TS_24_N_SWITCH.kicad_mod  xiao_esp32c3.kicad_mod
Hardware/life_counter/life_counter_libraries/113991054/: MODULE_113991054.kicad_mod
Hardware/life_counter/life_counter_libraries/12066D107MAT2A/: CAP_1206X_AVX.step
Hardware/life_counter/life_counter_libraries/1N4148W_13_F/: SOD123_DIO.step
Hardware/life_counter/life_counter_libraries/CR1206_JW_334ELF/: CR1206-JW-334ELF.kicad_sym  RESC3216X75N.kicad_mod
Hardware/life_counter/life_counter_libraries/CR1206_JW_684ELF(1)/: CR1206-JW-684ELF.kicad_sym  RESC3216X75N.kicad_mod
Hardware/life_counter/life_counter_libraries/TS-24-N/: TS-24-N.step
Hardware/life_counter/output/: life_counter-B_Cu.gbr  life_counter-B_Mask.gbr  life_counter-B_Paste.gbr  life_counter-Edge_Cuts.gbr  life_counter-F_Cu.gbr  life_counter-F_Mask.gbr  life_counter-F_Paste.gbr  life_counter-F_Silkscreen.gbr  life_counter-NPTH.drl  life_counter-PTH.drl  life_counter-job.gbrjob
components/cmd_system/: CMakeLists.txt  cmd_system_sleep.c
documentation/: Audiosequence.mmd  GUIClassDiagram.mmd  HardwareBlockDiagram.mmd
main/: AudioManager.c  AudioManager.h  Button.h  CMakeLists.txt  ChangeHistory.c  ChangeHistory.h  DiceRoller.h  Game.c  Game.h  GameSettings.c  GameSettings.h  Keypad.c  Keypad.h  Player.c  Player.h  PowerManager.c  PowerManager.h  System.c  System.h  Utils.h  ValueChange.h  ViewController.c  ViewController.h  ViewModel.c  ViewModel.h  battery.c  battery.h  console_init.c  console_init.h  keypad.c  keypad.h  main.c
main/app/: GameDelegates.c  GameDelegates.h  PageManager.c  PageManager.h
main/app/pages/: ChangeHistoryPage.c  ChangeHistoryPage.h  CommanderPage.c  CommanderPage.h  ConfirmPage.c  ConfirmPage.h  DeviceSettingsPage.c  DeviceSettingsPage.h  DicePage.c  DicePage.h  GameSettingsPage.c  GameSettingsPage.h  KeyboardPage.c  KeyboardPage.h  MainPage.c  MainPage.h  MenuPage.c  MenuPage.h  PlayerPage.c  PlayerPage.h  PlayerSettingsPage.c  PlayerSettingsPage.h  SettingsPage.c  SettingsPage.h  ValueEditorPage.c  ValueEditorPage.h  ValueNamesPage.c  ValueNamesPage.h
main/gui_framework/: CMakeLists.txt
main/gui_framework/include/: Assert.h  Debug.h  GUIComponent.h  GUIContainer.h  GUIFramework.h  GUIList.h  GUIRenderer.h  GUITest.h
main/gui_framework/include/test/: GUItests.h
main/gui_framework/src/: GUIComponent.c  GUIContainer.c  GUIHBox.c  GUILabel.c  GUIList.c  GUIRenderer.c  GUIVBox.c  testVBox.c  tests.c
main/model/: Button.c  Button.h  ChangeHistory.c  ChangeHistory.h  DiceRoller.c  DiceRoller.h  Game.c  Game.h  Settings.c  Settings.h  Tests.c  Tests.h
(+80 files in other folders)
