idf_component_register(SRCS 
                        "System.c"
                        "PowerManager.c"
                        "AudioManager.c"

                        "Keypad.c" "battery.c" "console_init.c"  
                        "main.c"
                        "model/DiceRoller.c"
                        "model/Game.c"
                        "model/Settings.c"

                        "app/pages/ChangeHistoryPage.c"
                        "app/pages/ValueNamesPage.c"
                        "app/pages/PlayerSettingsPage.c"
                        "app/pages/KeyboardPage.c"
                        "app/pages/ConfirmPage.c"
                        "app/pages/DeviceSettingsPage.c"
                        "app/pages/CommanderPage.c"
                        "app/pages/GameSettingsPage.c"
                        "app/pages/MainPage.c"
                        "app/pages/SettingsPage.c"
                        "app/pages/MenuPage.c"
                        "app/pages/PlayerPage.c"
                        "app/pages/ValueEditorPage.c"
                        "app/pages/DicePage.c"
                        "app/PageManager.c"
                        "app/GameDelegates.c"
                        PRIV_REQUIRES spi_flash driver console esp_adc nvs_flash esp_timer
                        REQUIRES "gui_framework" "unity"
                        INCLUDE_DIRS "."
)